--- a/style.css
+++ b/style.css
@@ -66,8 +66,8 @@ body {
   overflow-y: scroll;
   overflow-x: hidden;
 }
-::-webkit-scrollbar{
-  background:  rgba(255, 255, 255, 0.1);
+::-webkit-scrollbar {
+  background: rgba(255, 255, 255, 0.1);
   border-radius: 10px;
 }
 ::-webkit-scrollbar-thumb {
@@ -80,9 +80,9 @@ p {
   font-weight: 600;
   margin-block-end: 0;
   margin-block-start: 0;
-  color:rgb(13, 0, 59);
+  color: rgb(13, 0, 59);
 }
-.done-text{
+.done-text {
   text-decoration: line-through;
   color: rgb(84, 84, 141);
 }
@@ -95,15 +95,15 @@ p {
   justify-content: space-between;
   padding: 5px;
 }
-.task p{
+.task p {
   overflow-y: scroll;
   width: 65%;
 }
-.task:hover{
+.task:hover {
   background-color: rgba(100, 148, 237, 0.589);
   border-radius: 20px;
 }
-.task input[type='text']{
+.task input[type="text"] {
   width: 60%;
   font-size: 1rem;
   padding: 0px 8px;
@@ -116,11 +116,11 @@ p {
   border-radius: 10px;
   overflow: scroll;
 }
-input[type='checkbox'] {
+input[type="checkbox"] {
   cursor: pointer;
   zoom: 1.5;
 }
-img{
+img {
   width: 25px;
   height: 25px;
   margin: 2px;
